# academic_reader

./: .gitignore  .replit  README.md  import.py  pyproject.toml  reader3.py  replit.md  server.py
importers/: __init__.py  arxiv.py  epub.py  html.py  pdf.py
static/: reader.css  reader.js  theme.js
templates/: library.html  reader.html
tests/: test_importers.py  test_sections.py
